<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/nav_appointment"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AppointmentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_campus"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>

    <!-- There are 4 possible campuses -->
    <Spinner
        android:id="@+id/spinnerCampus"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textSize="18sp"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_slot"
        android:textSize="18sp"
        android:layout_marginTop="24dp"/>

    <Spinner
        android:id="@+id/spinnerTimeSlots"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_slot"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:textColor="#ffffff"/>

</LinearLayout>
