<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/subject"
        android:hint="@string/enter_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <EditText
        android:id="@+id/content"
        android:hint="@string/enter_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <EditText
        android:id="@+id/email"
        android:hint="@string/enter_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

    <Button
        android:id="@+id/btnSend"
        android:text="@string/send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>