<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RoleSelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userRole_label"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/patientButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:textSize="20sp"
            android:padding="18dp"
            android:layout_margin="12dp"/>

        <Button
            android:id="@+id/adminButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clinic_admin"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:textSize="20sp"
            android:padding="18dp"
            android:layout_margin="12dp"/>

    </LinearLayout>

</RelativeLayout>
