<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".SymptomChecker">

    <!-- EditText for inputting symptoms -->
    <EditText
    android:id="@+id/symptomEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_marginTop="32dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:hint="@string/enter_symptoms_here"
    android:inputType="text"
    android:background="@drawable/rounded_corner"
    android:padding="12dp" />

    <!-- Button to trigger symptom check -->
    <Button
    android:id="@+id/checkButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/symptomEditText"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="24dp"
    android:text="@string/check_symptoms"
    android:background="@drawable/rounded_corner"
    android:padding="12dp" />

    <!-- TextView to display results -->
    <TextView
    android:id="@+id/resultsTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/checkButton"
    android:layout_marginTop="24dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:text="@string/results_will_appear_here"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:background="@drawable/rounded_text_background"
    android:padding="16dp"
    android:textColor="@color/black"    />

    </RelativeLayout>
