<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/AdminDashboard"
    android:background="@drawable/background2"
    tools:context=".AdminDashboard">

    <!-- Welcome Message TextView -->
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/adminImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Admin ImageView -->
    <ImageView
        android:id="@+id/adminImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/admin_logo"
        android:contentDescription="@string/the_admin_image_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:background="@drawable/square_button_background"
                android:text="@string/view_appointments" />

            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:background="@drawable/square_button_background"
                android:text="@string/booking_history" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:background="@drawable/square_button_background"
                android:text="@string/manage_health_resources" />

            <Button
                android:id="@+id/button4"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:background="@drawable/square_button_background"
                android:text="@string/feedback" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/botton_nav_menu"
        tools:ignore="VisualLintBottomNav" />

</androidx.constraintlayout.widget.ConstraintLayout>
